<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!-- TextView for displaying entered numbers -->
    <TextView
        android:id="@+id/displayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:text="@string/_0"
        android:padding="18dp"
        android:layout_marginTop="18dp"
        android:layout_centerHorizontal="true" />

    <!-- Digital Keyboard -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/displayTextView"
        android:columnCount="3"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="16dp" >

        <!-- Buttons for numbers 1-9 -->
        <Button
            android:id="@+id/button1"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_1"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button2"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_2"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button3"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_3"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button4"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_4"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button5"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_5"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button6"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_6"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button7"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_7"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button8"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_8"
            android:textSize="22sp"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button9"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_9"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <!-- Button for number 0 -->
        <Button
            android:id="@+id/button0"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/_01"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="24sp"
            android:text="@string/min"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />

        <!-- Button for clearing -->
        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/max"
            android:layout_margin="4dp"
            android:onClick="onClearButtonClick" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textSize="22sp"
            android:text="@string/x"
            android:layout_margin="4dp"
            android:onClick="onClearButtonClick" />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/divorce"
            android:textSize="22sp"
            android:layout_margin="4dp"
            android:onClick="onClearButtonClick" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/equal"
            android:textSize="22sp"
            android:layout_margin="4dp"
            android:onClick="onClearButtonClick" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_columnSpan="3"
            android:text="@string/clear"
            android:textSize="24sp"
            android:layout_margin="4dp"
            android:onClick="onButtonClick" />
    </GridLayout>
</RelativeLayout>
